@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2004-2006 rPath, Inc.
+# Copyright (c) 2004-2007 rPath, Inc.
 #
 # This program is distributed under the terms of the Common Public License,
 # version 1.0. A copy of this license should have been distributed with this
@@ -420,7 +420,7 @@ class NetworkRepositoryClient(xmlshims.NetworkConvertors,
         self.uploadRateLimit = uploadRateLimit
 
         if proxy:
-            self.proxies = { 'http' : proxy, 'https' : proxy }
+            self.proxies = proxy
         else:
             self.proxies = None
 
